fix chat container on dark mode

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,13 +1,16 @@
 .chat-container {
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.chat-container > div {
   display: grid;
-  align-self: center;
-  justify-content: center;
-  margin-top: 5%;
   margin-left: 30%;
   grid-template-columns: 2fr 4fr;
   grid-template-rows: 0.2fr 3fr;
   border: 1px solid #d1d5db;
-  min-height: 85vh;
+  min-height: 75vh;
   width: 60%;
   font-size: 1.2rem;
 }
@@ -27,6 +30,7 @@
   padding: 8px;
   display: flex;
   flex-direction: column;
+  min-height: 100%;
 }
 
 .chat {
@@ -48,6 +52,7 @@
   flex-direction: column;
   gap: 10px;
   max-height: 600px;
+
   flex: 1;
   overflow: hidden;
   overflow-y: auto;
@@ -164,20 +169,20 @@
   font-weight: 900;
 }
 @media (max-width: 1250px) {
-  .chat-container {
+  .chat-container > div {
     margin-left: 25%;
     width: 85vh;
   }
 }
 
 @media (max-width: 1010px) {
-  .chat-container {
+  .chat-container > div {
     margin-left: 18%;
     width: 85vh;
   }
 }
 @media (max-width: 880px) {
-  .chat-container {
+  .chat-container > div {
     margin-left: 20%;
     width: 75vh;
     font-size: 1.1rem;
@@ -189,7 +194,7 @@
 }
 
 @media (max-width: 770px) {
-  .chat-container {
+  .chat-container > div {
     margin-left: 20%;
     font-size: 1rem;
     width: 70vh;
@@ -197,7 +202,8 @@
 }
 
 @media (max-width: 750px) {
-  .chat-container {
+  .chat-container > div {
+    padding-top: 120px;
     margin: 18% auto;
     font-size: 1rem;
     width: 90%;
@@ -244,5 +250,11 @@
     max-height: 90vh;
     border-top: 0;
     gap: 10px;
+  }
+}
+
+@media (max-width: 400px) {
+  .chat-container > div {
+    width: 100%;
   }
 }
